[gd_scene load_steps=12 format=3 uid="uid://dif1fwd782xph"]

[ext_resource type="Script" path="res://src/Levels/Map6/Script/map_6.gd" id="1_q3pga"]
[ext_resource type="PackedScene" uid="uid://cr7rhyavhx4dd" path="res://src/Levels/Map6/Background/map_6_background.tscn" id="2_glt3x"]
[ext_resource type="PackedScene" uid="uid://dsw1e7c82xsd3" path="res://src/Levels/Map2/Scroll/scroll.tscn" id="3_6vs4g"]
[ext_resource type="PackedScene" uid="uid://dv8pm11dyd1p" path="res://src/Characters/Little_Witch/little_witch.tscn" id="4_kp144"]
[ext_resource type="PackedScene" uid="uid://c62ulywtyxpu6" path="res://src/Characters/Little_Elvis/little_elvis.tscn" id="5_ndh6q"]
[ext_resource type="PackedScene" uid="uid://ytgnhlylgqpb" path="res://src/Characters/Elementals_water_priestess/Elementals_water_priestess.tscn" id="6_avorv"]
[ext_resource type="PackedScene" uid="uid://7vkajok2ya66" path="res://src/Extra/HUD/hud.tscn" id="7_5rrct"]
[ext_resource type="PackedScene" uid="uid://be1egpjfr8n0b" path="res://src/Transition/Pause/Pause.tscn" id="8_fuxc6"]
[ext_resource type="FontFile" uid="uid://dbcbmpufkv7it" path="res://assets/fonts/Abaddon Bold.ttf" id="9_f6ul7"]
[ext_resource type="Texture2D" uid="uid://8lqbix2eiyxo" path="res://assets/packs/GUI_1/GUI.png" id="10_owirr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kp7aq"]
texture = ExtResource("10_owirr")
region_rect = Rect2(113, 98, 30, 13)

[node name="Map6" type="Node"]
script = ExtResource("1_q3pga")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_glt3x")]

[node name="Map_Scroll" parent="." instance=ExtResource("3_6vs4g")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(600, 320)
offset = Vector2(-24, 4)

[node name="Little_Witch" parent="." instance=ExtResource("4_kp144")]
unique_name_in_owner = true
position = Vector2(538, -584)

[node name="Little_Elvis" parent="." instance=ExtResource("5_ndh6q")]
unique_name_in_owner = true
position = Vector2(231, -43)

[node name="Elementals_water_priestess" parent="." instance=ExtResource("6_avorv")]
unique_name_in_owner = true
position = Vector2(-37, -74)

[node name="HUD" parent="." instance=ExtResource("7_5rrct")]

[node name="Pause" parent="." instance=ExtResource("8_fuxc6")]
visible = false

[node name="Menu" type="Button" parent="."]
offset_left = 17.0
offset_top = 7.0
offset_right = 133.0
offset_bottom = 58.0
theme_override_colors/font_outline_color = Color(0.419608, 0.388235, 0.662745, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("9_f6ul7")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxTexture_kp7aq")
text = "Menu
"

[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
